src/styles/content.scss
@font-face {
    font-family: GoodThings;
    src: url("/GoodThings.otf") format("truetype");
}

h1, h2, button, label, input {
  font-family: GoodThings;
}

.container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: url("/faces.png") 45 0, default;
}

.image-container {
  margin-top: 70px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 30px;
  transition: 0.8s;

}

.bigger-margin {
  margin-top: 140px;
}


.buttons {
  -webkit-touch-callout:none;
  -webkit-user-select:none;
  -khtml-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
  user-select:none;
  -webkit-tap-highlight-color:rgba(0,0,0,0);

  display: flex;
  width: 600px;
  justify-content: space-around;
  margin-left: 20px;
  opacity: 1;
  transition: 0.4s;
  transition-timing-function: ease-in;
  @include for-tablet-portrait-down {
    width: 100%;
  }
}

.transparent {
  transform: translateY(-80px) scale(0.2);
  opacity: 0;
}

.ctrl-btn {
  background-image: url(/ctrl-btn.png);
}

.s-btn {
  background-image: url(/s-btn.png);
}

.clicked {
  transform: translateY(20px) scale(0.98);
}

.image {
  background-repeat: no-repeat;
  background-size: contain;
  height: 300px;
  width: 300px;
  @include for-tablet-portrait-down {
    height: 180px;
    width: 180px;
  }
}

.date-holder {
  display: flex;
}

.date {
  background-repeat: no-repeat;
  background-size: contain;
  height: 65px;
  width: 40px;
  object-fit: cover;
  margin-bottom: 36px;
  filter: invert(1) brightness(100%) saturate(10000%);
  transition: 0.2s;
  @include for-tablet-portrait-down {
    height: 55px;
    width: 30px;
  }
}

.black-date {
  filter: invert(0) brightness(0) saturate(0);
}

.press-class {
  -webkit-touch-callout:none;
  -webkit-user-select:none;
  -khtml-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
  user-select:none;
  -webkit-tap-highlight-color:rgba(0,0,0,0);

  font-size: 36px;
  margin-top: 0;
  color: white;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  opacity: 0;
  transition: 1s;
  transform: translateY(100px) scale(1.1);
  transition-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1.275);

  @include for-tablet-portrait-down {
    width: 90%;
  }
}

.opaqueify {
  opacity: 1;
  transform: translateY(0px) scale(1);
}

.transparentize {
  opacity: 0;
  transform: scale(2);
}

.form label {
  cursor: url("/faces.png") 45 0, default;
  width: 100%;
  text-align: left;
  color: white;
}

.form input {
  cursor: url("/faces.png") 45 0, default;
  margin-bottom: 20px;
  width: 100%;
  height: 30px;
  border: 0;
  background: transparent;
  border-bottom: 1px solid white;
  font-size: 48px;
  color: white;
}

.form input:last-child {

  font-size: 60px;
  background: transparent;
  width: 220px;
  height: 80px;
  padding-bottom: 10px;
  border: 2px solid white;
  margin: auto;
  margin: 20px auto 50px auto;
  transition: 0.2s;
}

.form input:last-child:hover {

  border: 2px solid #ffc6ff;
  background-color: #ffc6ff;
  color: #0e0e0e;
}

.form label {

  font-size: 30px;
}

.hearts {
  background-color: white;
  height: 100%;
  width: 100vw;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: absolute;
  z-index: -1;
  display: flex;
  justify-content: center;
  align-items: center;
}
.save-the-date {

  font-size: 70px;
  color: white;
  padding: 30px;
  width: 700px;
  border: 3px solid white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.std-btn {
  margin-top: 30px;

  font-size: 50px;
  color: black;
  height: 100px;
  width: 180px;
  background-color: white;
  border-radius: 5px;
  border: none;
  transition: 0.1s;
}

.std-btn:hover {
  background-color: #ffc6ff;
  color: white;
}

.full-screen {

}

.thank-you {
  height: 100vh;
  width: 100vw;

  font-size: 24px;
  color: white;
  text-decoration: none;
}


.hidden {
  display: none;
}

.links {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: center;
  align-items: flex-end;
}

.linkStyles {
  text-decoration: none;
  display: flex;
  flex-direction: column;
  align-items: center;
  color: white;
  font-size: 36px;
  margin: 8px;
  width: 120px;
  font-family: GoodThings;
}

.logo {
  height: 40px;
}

.componentStyles {
  width: 100%;
  margin: 0 auto;
  text-align: center;
  padding: 0 0 30px;

  @media (min-width: 768px) {
    width: 50%;
  }
}

.bounce-in-top-1 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
}

.bounce-in-top-2 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.2s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.2s both;
}

.bounce-in-top-3 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.6s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.6s both;
}

.bounce-in-top-4 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.8s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.8s both;
}

.bounce-in-top-5 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.4s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.4s both;
}

.bounce-in-top-6 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.2s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.2s both;
}

.bounce-in-top-7 {
  -webkit-animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.1s both;
            animation: bounce-in-top 1.1s cubic-bezier(0.230, 1.000, 0.320, 1.000) 0.1s both;
}
/* ... */

